Terminado Agregar consumo

--- a/src/app/ingreso-consumo/ingreso-consumo.component.html
+++ b/src/app/ingreso-consumo/ingreso-consumo.component.html
@@ -8,7 +8,7 @@
                     <input type="number" 
                         formControlName="id"
                         class="form-control ip" 
-                        placeholder="ID" 
+                        placeholder="Auto Generado" 
                     />
                     <div class="text-danger"
                         *ngIf="consumoForm.get('id')?.hasError('required')
