Completo, falta login

--- a/src/app/ingreso-consumo/ingreso-consumo.component.html
+++ b/src/app/ingreso-consumo/ingreso-consumo.component.html
@@ -31,7 +31,7 @@
                     </div>
                 </div>
                 <div class="cl-c struc">
-                    <label class="visually-hidden lb">Estado</label>
+                    <label class="visually-hidden lb">Id</label>
                     <input type="text" 
                         [ngModel]="idPis"
                         formControlName="idPisina"
