--- a/src/app/ingreso-producto/ingreso-producto.component.html
+++ b/src/app/ingreso-producto/ingreso-producto.component.html
@@ -12,7 +12,7 @@
                         id="id_produc_gasto" 
                         name = "id_produc_gasto"
                         class="form-control ip" 
-                        placeholder="ID" 
+                        placeholder="Auto Generado"
                     />
                     <div class="text-danger"
                         *ngIf="productoForm.get('id')?.hasError('required')
