--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,29 +1,28 @@
 
 <main class="form-signin text-center">
-    <form class="item" #f="ngForm" (sgSubmit)="f.form.valid && login(f)">
+    <form class="item"  [formGroup]="loginForm">
         <!--<img class="mb-4" src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
         <h1 class="h3 mb-3 fw-normal">Iniciar Sesión</h1>
         <label for="inputUser" class="visually-hidden">ID usuario</label>
         <input type="user" 
-            id="user" 
-            name = "user"
+            formControlName="usu"
             class="form-control" 
             placeholder="Usuario" 
-            ngModel required autofocus
+            autofocus
         />
         <label for="inputPassword" class="visually-hidden">Contraseña</label>
         <input type="password" 
-            id="inputPassword" 
+            formControlName="contra"
             class="form-control" 
-            name = "password"
             placeholder="password" 
-            ngModel required
+            required
         />
         <div class="checkbox mb-3">
         </div>
-        <button class="w-100 btn btn-lg btn-primary" 
-            type="submit"
-            (click)="inicioSec()">
+        <button class="w-100 btn btn-lg btn-primary"
+            [disabled]="loginForm.invalid" 
+            (click)="login()"
+            type="submit">
             Ingresar
         </button>
         <p class="mt-5 mb-3 text-muted">&copy; 2021</p>
