--- a/src/app/visualizar-inventario/visualizar-inventario.component.html
+++ b/src/app/visualizar-inventario/visualizar-inventario.component.html
@@ -5,31 +5,17 @@
     <table class="table">
         <thead>
           <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
+            <th scope="col">Id producto</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Stock</th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td>Larry</td>
-            <td>the Bird</td>
-            <td>@twitter</td>
-          </tr>
+          <tr *ngFor = "let inventario of listGastos1">
+            <th scope="row">{{inventario.producto_id}}</th>
+            <td>{{inventario.producto_nombre}}</td>
+            <td>{{inventario.total}}</td>
+          </tr>  
         </tbody>
       </table>
 </div>
